[package]
name = "rzhavchina"
version = "0.1.0"
edition = "2021"
authors = ["Igor Fedenko <i.fedenko@module.ru>"]
description = "Write Rust programs in Russian language"
license = "WTFPL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
proc-macro = true
